[tool.poetry]
name = "clamav-gcs-bucket"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
colorama = "^0.4.6"
coloredlogs = "^15.0.1"
crcmod = "^1.7"
cvdupdate = "^1.1.1"
dnspython = "^2.5.0"
humanfriendly = "^10.0"
idna = "^3.6"
rangehttpserver = "^1.3.3"
requests = "^2.31.0"
urllib3 = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
